--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ pathfinding = "^1.0.11"
 python-dotenv = "^1.0.1"
 loguru = "^0.7.2"
 seaborn = "^0.13.2"
+tqdm = "^4.66.6"
 
 [tool.poetry.group.dev.dependencies]
 pylint = "^3.3.1"
